# ddcolors

./: .gitignore  CMakeLists.txt  DDColors.cpp  DDColors.h  DecisionDiagram.cpp  DecisionDiagram.h  Graph.cpp  Graph.h  LICENSE  README.md  main.cpp  scip_interface.cpp  scip_interface.h
cmake/: FindCPLEX.cmake  FindEXACTCOLORS.cmake  FindGUROBI.cmake  FindQSOPT.cmake  FindSCIP.cmake
